2011-02-04  Xiyuan Xia  <xiyuan@chromium.org>

Reviewed by Tony Chang.

        [Chromium] Option text in select popup does not align with menulist button text
        https://bugs.webkit.org/show_bug.cgi?id=53632

        This makes clientPaddingLeft and  clientPaddingRight return
        the additional m_innerBlock's padding so that the popup item text
        aligns with the menulist button text.

        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::clientPaddingLeft):
        (WebCore::RenderMenuList::clientPaddingRight):

git-svn-id: svn://svn.chromium.org/blink/trunk@77716 bbb929c8-8fbe-4397-9dbb-9b2b20218538